[Sync] Make ModelTypeController::DeactivateDataType idempotent

The issue is that ModelAssociationManager::StopDatatype() always calls
DeactivateDataType before Stop. It causes DCHECK if type wasn't previously
activated.

DirectoryDataTypeController::Deactivate is already idempotent, this change is to
mirror this behavior for USS type.

Proper fix is to update controller's state during activation and not call
Deactivate when not needed, but this change is more involved.

BUG=658443
R=maxbogue@chromium.org

Review-Url: https://codereview.chromium.org/2471943002
Cr-Commit-Position: refs/heads/master@{#429487}